@@ -1,3 +1,10 @@
+2005-04-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* fopen_unlocked.c (unlock_stream): New.
+	Consolidate unlocking code into a helper function.
+
+	* functions.texi: Regenerate.
+
 2005-04-13  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* asprintf.c: Include config.h.
